compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TopLevelDestructuring.kt
// TopLevelDestructuringKt
data class Pair(val x: Int, val y: Int)

val (x, y) = Pair(1, 2)

val z = { 3 }()
